--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "ws": "^8.16.0"
   }
 }
